--- a/personal-wellness/nail-hand-care/index.html
+++ b/personal-wellness/nail-hand-care/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail & Hand Care - Your Website Name</title>
+    <title>Nail & Hand Care - Smartpicks.toolblaster.com</title>
     <meta name="description" content="Find the best kits and tools for maintaining healthy nails and hands.">
     <link rel="stylesheet" href="../../assets/css/styles.css">
 </head>
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="../../index.html">Your Logo</a>
+                <a href="../../index.html">Smartpicks.toolblaster.com</a>
             </div>
             <nav>
                 <ul>
@@ -64,7 +64,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+            <p>&copy; 2025 Smartpicks.toolblaster.com. All rights reserved.</p>
             <div class="footer-nav">
                 <a href="../../disclaimer.html">Disclaimer</a>
                 <a href="#">Privacy Policy</a>
