--- a/personal-wellness/grooming-tools/index.html
+++ b/personal-wellness/grooming-tools/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grooming Tools - Your Website Name</title>
+    <title>Grooming Tools - Smartpicks.toolblaster.com</title>
     <meta name="description" content="Find the best trimmers, shavers, and razors for a flawless look.">
     <!-- Path to the stylesheet from within the subcategory folder -->
     <link rel="stylesheet" href="../../assets/css/styles.css">
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="../../index.html">Your Logo</a>
+                <a href="../../index.html">Smartpicks.toolblaster.com</a>
             </div>
             <nav>
                 <ul>
@@ -65,7 +65,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+            <p>&copy; 2025 Smartpicks.toolblaster.com. All rights reserved.</p>
             <div class="footer-nav">
                 <a href="../../disclaimer.html">Disclaimer</a>
                 <a href="#">Privacy Policy</a>
